Investopedia - Term of the Day - Consumer Confidence Index (CCI)

--- a/Investopedia - Term of the Day/2021/02-Feb/19. Payment for order flow (PFOF).md
+++ b/Investopedia - Term of the Day/2021/02-Feb/19. Payment for order flow (PFOF).md
@@ -1,6 +1,6 @@
 # Payment for order flow (PFOF)
 
-- [Payment for order flow (PFOF)](https://www.investopedia.com/terms/p/paymentoforderflow.asp?utm_source=term-of-the-day&utm_campaign=www.investopedia.com&utm_term=22981067&utm_medium=email)
+- [Payment for order flow (PFOF)](https://www.investopedia.com/terms/p/paymentoforderflow.asp)
 
 ## Terms
 
